# dv-paris-arbres

./: .gitignore  README.md  pyproject.toml
docs/: documentation.xlsx
notebooks/: 01_eda_trees.ipynb  02_eda_bdnb.ipynb
scripts/: extract_geography.py  extract_trees.py  spatial_engine.py  transform_trees.py
src/: export.py  infrastructure.py  main.py  transformations.py
workbooks/: paris_batis.twb  ~paris_batis__10804.twbr
