[project]
name = "dv-paris-arbres"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Sebben",email = "felipesebben@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.5.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pantab (>=5.3.0,<6.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "tableauhyperapi (>=0.0.25080,<0.0.25081)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
